# webscraping

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
tests/clients/: gemini_client_test.py
webscraping/: main.py
webscraping/common/: config.py  container.py
webscraping/common/clients/gemini/: gemini.py  igemini.py
webscraping/common/clients/gemini_client/: gemini_client.py  igemini_client.py
webscraping/common/clients/httpxClient/: httpxClient.py
