[project]
name = "webscraping"
version = "0.1.0"
description = "Local webscraper"
authors = [
    {name = "Isuf17",email = "isuf17@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
pre-commit = "^4.2.0"

[tool.ruff]
target-version = "py313"
