[project]
name = "webscraping"
version = "0.1.0"
description = "Local webscraper"
authors = [
    {name = "Isuf17",email = "isuf17@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
pre-commit = "^4.2.0"
mypy = "^1.17.0"

[tool.ruff]
target-version = "py313"
lint.extend-select = ["E"]
preview = true

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
